fixed card alignment in 790 width, fixed header placement in 320 widht, fixed long text issue for all screen resolutions

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -5,10 +5,11 @@
   display: grid;
   column-gap: 17px;
   row-gap: 20px;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, 282px);
   margin: 0 auto;
   list-style: none;
   padding-left: 0;
+  justify-content: center;
 }
 
 @media screen and (min-width: 320px) and (max-width: 760px) {
