--- a/blocks/header.css
+++ b/blocks/header.css
@@ -8,15 +8,16 @@
 @media screen and (min-width: 320px) and (max-width: 760px) {
   .header {
     margin-top: 28px;
+    height: 24px;
   }
   .header__logo {
     width: 126px;
-    height: 24px;
     margin-left: 27px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1275px) {
   .header {
     padding-bottom: 32px;
+    margin-left: 27px;
   }
 }
