--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -42,7 +42,6 @@
   opacity: 0.6;
 }
 .profile__title {
-  display: flex;
   font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -61,6 +60,9 @@
   font-weight: 400;
   grid-area: description;
   margin-top: 16px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .profile__image {
   height: 120px;
@@ -82,9 +84,8 @@
     font-size: 14px;
     margin-top: 14px;
     margin-bottom: 36px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
+    max-width: 282px;
+    height: 14px;
   }
   .profile__image {
     justify-self: center;
@@ -94,8 +95,7 @@
   .profile__title {
     font-size: 22px;
     padding-top: 26.25px;
-    width: 196px;
-    text-overflow: ellipsis;
+    max-width: 196px;
     margin-left: 19px;
   }
   .profile__edit-button {
